# Object-Creation-Project---KWS

./: .gitignore  LICENSE.txt  README.md  build.py  generate_assets.py  install.bat  install.sh  installer.nsi  main.py  nsis-page.html  requirements.txt  vercel.json
cpp/: CMakeLists.txt  build.bat  build.py
cpp/src/: ai_engine.cpp  ai_engine.h  bmesh.cpp  camera.cpp  camera.h  edit_tools.cpp  main.cpp  math_utils.h  mesh.cpp  mesh.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sculpt_tools.cpp  sculpt_tools.h  types.h
cpp/src/ai/: ai_engine.h
cpp/src/app/: main.cpp
cpp/src/core/: app_state.h  camera.cpp  camera.h  events.h  math_utils.h  types.h
cpp/src/editor/: edit_tools.cpp  edit_tools.h  sculpt_tools.cpp  sculpt_tools.h
cpp/src/geometry/: bmesh.cpp  bmesh.h  mesh.cpp
cpp/src/io/: exporters.cpp  exporters.h
cpp/src/platform/: platform.h  platform_win32.cpp
cpp/src/plugin/: plugin_api.h
cpp/src/renderer/: renderer.cpp
cpp/src/scene_graph/: scene.cpp  scene.h
cpp/src/ui/: editor_ui.cpp  editor_ui.h  input_handler.cpp  input_handler.h
installer/: setup.bat
src/: __init__.py  app.py
src/ai/: __init__.py  generator.py  procedural.py  prompt_engine.py
src/core/: __init__.py  camera.py  light.py  material.py  mesh.py  primitives.py  scene.py
src/editor/: __init__.py  properties.py  scene_tree.py  toolbar.py  viewport.py
src/exporters/: __init__.py  exporters.py
src/renderer/: __init__.py  opengl_renderer.py  shaders.py
src/utils/: __init__.py  colors.py  math_utils.py
website/: index.html
